--- a/ChatSample/wwwroot/index.html
+++ b/ChatSample/wwwroot/index.html
@@ -27,7 +27,7 @@
             var messageInput = document.getElementById('message');
 
             // Get the user name and store it to prepend to messages.
-            var name = prompt('Enter your name:', '');
+            var name = prompt('Enter your name please:', '');
             // Set initial focus to message input box.
             messageInput.focus();
 
@@ -45,6 +45,11 @@
                 var liElement = document.createElement('li');
                 liElement.innerHTML = '<strong>' + encodedName + '</strong>:&nbsp;&nbsp;' + encodedMsg;
                 document.getElementById('discussion').appendChild(liElement);
+            });
+
+            connection.on('identifyMessage', function () {
+                // Html encode display name and message.
+                connection.invoke('identify', name);
             });
 
             // Transport fallback functionality is now built into start.
